--- a/css/Style.css
+++ b/css/Style.css
@@ -42,6 +42,7 @@ img {
 	padding-right: 5px;
 	padding-top: 15px;
 	padding-bottom: 15px;
+	border: 0px;
 }
 
 div.outerContainer{
@@ -49,9 +50,9 @@ div.outerContainer{
 	border-width: 1px;
 	border-color: black;
 	background: #363c3f; /* background grey */
-	margin-left: auto;
-	margin-right: auto;
 	width: 60%;	
+	
+	margin: 0 auto;
 }
 
 div.titleContainer{
