Fixed sendmail function
sendMail.php now sends email to my email inbox

--- a/css/Style.css
+++ b/css/Style.css
@@ -8,6 +8,11 @@ ul li{
 	color: #eff7f9; /* off white */
 }
 
+ul li.liSpaced{
+	color: #eff7f9; /* off white */
+	margin-bottom: 5px;
+}
+
 p{
 	padding-bottom: 15px;
 }
